Remove duplication, easier to add more headers.

--- a/views/doubles/_form.haml
+++ b/views/doubles/_form.haml
@@ -22,13 +22,10 @@
     - statuses.each do |s|
       %option{:name => s, :selected => ((@double.status || 200) == s)}= s
 
-%p
-  %label{:for => 'double_response_headers_content_type'} Content-Type
-  %input.wide#double_response_headers_content_type{:type => 'text', :name => 'double[response_headers][Content-Type]', :value => @double.response_headers['Content-Type']}
-
-%p
-  %label{:for => 'double_response_headers_cache_control'} Cache-Control
-  %input.wide#double_response_headers_cache_control{:type => 'text', :name => 'double[response_headers][Cache-Control]', :value => @double.response_headers['Cache-Control']}
+- %w(Content-Type Cache-Control).each do |header|
+  %p
+    %label{:for => "double_response_headers_#{header.downcase}"}= header
+    %input.wide{:id => "double_response_headers_#{header.downcase}", :type => 'text', :name => "double[response_headers][#{header}]", :value => @double.response_headers[header]}
 
 %p
   %input{:type => 'submit', :value => 'Save'}
